--- a/DiandianIOS/DiandianIOS/DAMyOrderViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyOrderViewController.xib
@@ -14,46 +14,47 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="748"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="768"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4cf-7w-Xyq">
-                    <rect key="frame" x="0.0" y="0.0" width="120" height="38"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.95686274509803915" green="0.78431372549019607" blue="0.20392156862745098" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YMr-4Z-wRK">
-                    <rect key="frame" x="0.0" y="46" width="120" height="666"/>
+                    <rect key="frame" x="0.0" y="67" width="140" height="583"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cqh-xM-XtQ">
-                    <rect key="frame" x="34" y="4" width="70" height="33"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cqh-xM-XtQ">
+                    <rect key="frame" x="-1" y="0.0" width="143" height="67"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="您的菜单">
+                    <state key="normal" backgroundImage="menubook_sidetop1.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
                         <action selector="putDone:" destination="-1" eventType="touchUpInside" id="fZc-rL-y8H"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="clipboard1.png" translatesAutoresizingMaskIntoConstraints="NO" id="AFB-4j-njH">
-                    <rect key="frame" x="9" y="7" width="27" height="25"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menubook_sidebottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="RYJ-k7-pbp">
+                    <rect key="frame" x="0.0" y="650" width="140" height="118"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="总价：2000元" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rXQ-OH-Jfq">
-                    <rect key="frame" x="5" y="720" width="107" height="21"/>
+                    <rect key="frame" x="7" y="650" width="107" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menubook_word.png" translatesAutoresizingMaskIntoConstraints="NO" id="YIb-4h-Ncn">
+                    <rect key="frame" x="17" y="694" width="107" height="45"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
     </objects>
     <resources>
-        <image name="clipboard1.png" width="29" height="30"/>
+        <image name="menubook_sidebottom.png" width="280" height="236"/>
+        <image name="menubook_sidetop1.png" width="278" height="134"/>
+        <image name="menubook_word.png" width="214" height="90"/>
     </resources>
 </document>
