--- a/DiandianIOS/DiandianIOS/DABillViewController.xib
+++ b/DiandianIOS/DiandianIOS/DABillViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
@@ -65,6 +65,15 @@
                             <connections>
                                 <action selector="onBackTouched:" destination="-1" eventType="touchUpInside" id="u8V-RG-F6q"/>
                             </connections>
+                        </button>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlY-Gj-r8N">
+                            <rect key="frame" x="777" y="12" width="100" height="42"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <state key="normal" title="打印订单" backgroundImage="desk_topbotton.png">
+                                <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -176,6 +185,8 @@
         <image name="desk_jiebotton.png" width="306" height="137"/>
         <image name="desk_jz1.png" width="1218" height="1372"/>
         <image name="desk_top.png" width="2048" height="129"/>
+        <image name="desk_topbotton.png" width="258" height="75"/>
+        <image name="desk_topbotton.png" width="258" height="75"/>
         <image name="desk_topbotton.png" width="258" height="75"/>
         <image name="desk_word.png" width="729" height="165"/>
     </resources>
