--- a/DiandianIOS/DiandianIOS/DAMyMenuBookCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyMenuBookCell.xib
@@ -52,16 +52,10 @@
                             <action selector="addMenu:" destination="819-cv-spH" eventType="touchUpInside" id="NuV-N4-UNu"/>
                         </connections>
                     </button>
-                    <button opaque="NO" tag="14" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kYS-Nq-W3t">
-                        <rect key="frame" x="3" y="14" width="97" height="30"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="来小份">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="addSmallItem:" destination="819-cv-spH" eventType="touchUpInside" id="DeE-Wv-Qub"/>
-                        </connections>
-                    </button>
+                    <imageView hidden="YES" userInteractionEnabled="NO" tag="666" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soldout.png" id="kVe-vw-Pjh">
+                        <rect key="frame" x="11" y="20" width="100" height="100"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
@@ -72,5 +66,6 @@
     <resources>
         <image name="menubook_g.png" width="332" height="111"/>
         <image name="menubook_grbotton.png" width="332" height="111"/>
+        <image name="soldout.png" width="273" height="274"/>
     </resources>
 </document>
